--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ tracing = "0.1.37"
 tracing-chrome = "0.7.1"
 tracing-subscriber = "0.3.7"
 # ug = "0.4.0"
-ug = { git = "https://github.com/hsthe29/ug.git" }
+ug = { git = "https://github.com/hsthe29/ug.git", package = "ug-core" }
 ug-cuda = { git = "https://github.com/hsthe29/ug.git", package = "ug-cuda" }
 ug-metal = { git = "https://github.com/hsthe29/ug.git", package = "ug-metal" }
 yoke = { version = "0.7.2", features = ["derive"] }
