--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,13 +70,17 @@ tokenizers = { version = "0.21.0", default-features = false }
 tracing = "0.1.37"
 tracing-chrome = "0.7.1"
 tracing-subscriber = "0.3.7"
-# ug = "0.4.0"
-ug = { git = "https://github.com/hsthe29/ug.git", package = "ug-core" }
-ug-cuda = { git = "https://github.com/hsthe29/ug.git", package = "ug-cuda" }
-ug-metal = { git = "https://github.com/hsthe29/ug.git", package = "ug-metal" }
+ug = "0.4.0"
+ug-cuda = "0.4.0"
+ug-metal = "0.4.0"
 yoke = { version = "0.7.2", features = ["derive"] }
 zip = { version = "1.1.1", default-features = false }
 metal = { version = "0.27.0", features = ["mps"]}
+
+[patch.crates-io]
+ug = { git = "https://github.com/hsthe29/ug.git", package = "ug-core" }
+ug-cuda = { git = "https://github.com/hsthe29/ug.git", package = "ug-cuda" }
+ug-metal = { git = "https://github.com/hsthe29/ug.git", package = "ug-metal" }
 
 [profile.release-with-debug]
 inherits = "release"
