--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,7 +78,7 @@ zip = { version = "1.1.1", default-features = false }
 metal = { version = "0.27.0", features = ["mps"]}
 
 [patch.crates-io]
-ug = { git = "https://github.com/hsthe29/ug.git", package = "ug-core" }
+ug = { git = "https://github.com/hsthe29/ug.git", package = "ug" }
 ug-cuda = { git = "https://github.com/hsthe29/ug.git", package = "ug-cuda" }
 ug-metal = { git = "https://github.com/hsthe29/ug.git", package = "ug-metal" }
 
