--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ tokenizers = { version = "0.21.0", default-features = false }
 tracing = "0.1.37"
 tracing-chrome = "0.7.1"
 tracing-subscriber = "0.3.7"
-ug = { version = "0.4.0", package = "ug-core" }
+ug = { version = "0.4.0", package = "ug" }
 ug-cuda = { version = "0.4.0", package = "ug-cuda" }
 ug-metal = { version = "0.4.0", package = "ug-metal" }
 yoke = { version = "0.7.2", features = ["derive"] }
