--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = candle-flash-attn/cutlass
 	url = https://github.com/NVIDIA/cutlass.git
 
+[submodule "candle-flash-attn-v3/cutlass"]
+	path = candle-flash-attn-v3/cutlass
+	url = https://github.com/NVIDIA/cutlass.git
