--- a/candle-flash-attn-v3/Cargo.toml
+++ b/candle-flash-attn-v3/Cargo.toml
@@ -1,20 +1,19 @@
 [package]
 name = "candle-flash-attn-v3"
-version = "0.8.0"
-edition = "2021"
-
-description = "Flash attention V3 layer for the candle ML framework."
-keywords = ["blas", "tensor", "machine-learning"]
-categories = ["science"]
-license = "MIT OR Apache-2.0"
+version.workspace = true
+edition.workspace = true
+description.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
+license.workspace = true
 readme = "README.md"
-authors = ["Michael Feil"]
-repository = "https://github.com/michaelfeil/candle-flash-attn-v3"
+
 exclude = ["cutlass/docs/**", "cutlass/test/**", "cutlass/examples/**", "cutlass/tools/**", "cutlass/media/**"]
 
 [dependencies]
-candle = { path = "../candle-core", features = ["cuda"], package = "candle-core", version = "0.8.0" }
-half = { version = "2.3.1", features = ["num-traits"] }
+candle = { path = "../candle-core", features = ["cuda"], package = "candle-core", version = "0.9.1" }
+half = { version = "2.5.0", features = ["num-traits"] }
 
 [build-dependencies]
 anyhow = { version = "1", features = ["backtrace"] }
